Update index html fiile

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <div class="body">
     <h1>HTML Quiz App </h1>
     <div class="container">
-        <p class="questions"> Question No : <span id="quNo">0</span>/20</p>
+        <p class="questions"> Question No : <span id="quNo">0</span>/ <span class="totalQuestion">20</span></p>
         <p class="question">Q =>  HTML stand for</p>
+        <div class="percentage">46%</div>
         <div class="options">
             <label for="option1">
                 <input type="radio" value="1" name="option" id="option1">
@@ -33,9 +34,10 @@
         </div>
         <div class="submit">
             <button type="submit" id="btn">Next</button>
+            <button type="submit" id="finishbtn">Finish</button>
         </div>
     </div>
 </div>
-<script type="module" src="script.js"></script>
+<script src="script.js"></script=>
 </body>
 </html>
