--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="body">
-    <h1>HTML Quiz App </h1>
+    <h1>HTML Quiz </h1>
     <div class="container">
         <p class="questions"> Question No : <span id="quNo">0</span>/ <span class="totalQuestion">20</span></p>
         <p class="question">Q =>  HTML stand for</p>
@@ -38,6 +38,6 @@
         </div>
     </div>
 </div>
-<script src="script.js"></script=>
+<script src="script.js"></script>
 </body>
 </html>
